[package]
name = "mercator_data_generator"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Generate test data for Mercator"
#homepage = "https://crates.io/crates/mercator_data_generator"
repository = "https://github.com/epfl-dias/mercator_data_generator"
readme = "README.md"

keywords = []
categories = [ ]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
rand = "^0.7"

[workspace]
