[package]
name = "mercator_data_generator"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Generate test data for Mercator"
#homepage = "https://crates.io/crates/mercator_data_generator"
repository = "https://github.com/epfl-dias/mercator_data_generator"
readme = "README.md"

keywords = []
categories = [ ]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

[profile.release]
lto = true

[dependencies]
mercator_db = "0.1"
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Online help & argument parsing
clap = {version = "4.5", features = ["derive", "wrap_help"]}

[workspace]

[patch.crates-io]
mercator_db = { path = "../mercator_db" }
ironsea_index = { path = "../ironsea_index" }

ironsea_index_hashmap = { path = "../ironsea_index_hashmap" }
ironsea_index_sfc_dbc = { path = "../ironsea_index_sfc_dbc" }
